--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,6 @@ body {
     padding: 0px 40px 80px 0px;
 }
 
-.beta {
-    width: 200px;
-    height: 250px;
-    float: left;
-    padding: 0px 40px 80px 0px;
-}
-
 .description {
     width: 600px;
     height: 250px;
@@ -26,3 +19,20 @@ body {
     padding: 0px 40px 80px;
 }
 
+@media only screen and (max-width: 600px) {
+    .box, 
+    .description {
+        width: 100%;
+        height: 150px;
+    }
+
+    .description {
+        margin-bottom: 120px;
+    }
+
+
+    img {
+        height:100vw;
+        width: 90vw;
+    }
+}
